feat(): downgrade jdk build release to jdk11
remove the usage of java.net.Http